platform/nifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi 
  namespace: nifi
spec:
  selector:
    app: nifi
  ports:
    - name: https
      port: 8443
      targetPort: 8443
    - name: http
      port: 8080
      targetPort: 8080
