platform/nifi/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nifi 
  namespace: nifi
spec:
  to:
    kind: Service
    name: nifi
  port:
    targetPort: https 
  tls:
    termination: passthrough
